# mc-benchmark

./: README.md  Untitled.ipynb  bm.py  pyproject.toml
mc_benchmark/: __init__.py  analysis.py  benchmark.py
mc_benchmark/calculators/: __init__.py  base_calculator.py  duckdb_calculator.py  numba_calculator.py  numpy_calculator.py  polars_calculator.py
mc_benchmark/results/: duckdb_faster.csv
mc_benchmark/scenario_benchmarker/: pi_calculation.py  roulette_simulator.py
mc_benchmark/scenarios/: casino_simulation.yml  pi_calculation.yml  pi_comparisons.yml  simple_scenario.yml  test.yml
queries/chess/: full_chess.sql  group_by_rn_grouping.sql  lead_grouping.sql
queries/roulette/: reccte.sql  window1.sql  windowdense.sql
