[tool.poetry]
name = "mc-benchmark"
version = "0.1.0"
description = ""
authors = ["James McNeill <jpmmcneill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
numpy = "^1.26.3"
duckdb = "^0.9.2"
memory-profiler = "^0.61.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
